--- a/compile/Makefile
+++ b/compile/Makefile
@@ -1,6 +1,6 @@
 
 
-comp:
+comp: clean
 	vcs \
 	-sverilog \
 	+incdir+${UVM_HOME} \
@@ -8,6 +8,7 @@ comp:
 	-f ${AHB_VIP_HOME}/ahb_interface/ahb_interface_filelist.f \
 	-f ${AHB_VIP_HOME}/ahb_master/ahb_master_transaction/ahb_master_transaction_filelist.f \
 	-f ${AHB_VIP_HOME}/ahb_master/ahb_master_agent_filelist.f \
+	-f ${PWD}/filelist.f
 
 
 clean:
